5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4065/executions/1643_1053.log
== TEST (2019-04-07 00:23:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")
if(nome == cervo):
	print("cervo eh patrono do harry potter")
else:
	print("nao eh patrono do harry potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(nome == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:24:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")
if(nome = cervo):
	print("cervo eh patrono do harry potter")
else:
	print("nao eh patrono do harry potter")
-- ERROR:
File "XXXX", line 5
    if(nome = cervo):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:25:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")
if(nome = cervo):
	print("cervo eh patrono do harry potter")
else:
	print("nao eh patrono do harry potter")
-- ERROR:
File "XXXX", line 5
    if(nome = cervo):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:25:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")
if(nome == cervo):
	print("cervo eh patrono do harry potter")
else:
	print("nao eh patrono do harry potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(nome == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:27:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")
if(nome == "cervo"):
	print("cervo eh patrono do harry potter")
else:
	print("nome", "nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:28:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")
if(nome == "cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(nome, "nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 00:28:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")
if(nome == "cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(nome, "nao eh patrono do harry potter")
-- EXECUTION TIME:
0.169553
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:28:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")
if(nome == "cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(nome, "nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 00:29:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")
if(nome == "cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(nome, "nao eh patrono do harry potter")
-- EXECUTION TIME:
0.178743
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:29:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")
if(nome == "cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(nome, "nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:31:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")
nome == cervo
if(nome):
	print("cervo eh patrono do harry potter")
else:
	print(nome, "nao eh patrono do harry potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    nome == cervo
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:31:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")
patrono == cervo
if(nome):
	print("cervo eh patrono do harry potter")
else:
	print(nome, "nao eh patrono do harry potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    patrono == cervo
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:32:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if(nome == cervo):
	print("cervo eh patrono do harry potter")
else:
	print(nome, "nao eh patrono do harry potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(nome == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:32:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if("nome == cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(nome, "nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 00:32:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if("nome == cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(nome, "nao eh patrono do harry potter")
-- EXECUTION TIME:
0.123423
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:33:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if("nome == cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(nome, "nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:33:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if("nome" == "cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(nome, "nao eh patrono do harry potter")
-- OUTPUT:
cervo nao eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:34:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if("nome" == "cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(nome, "nao eh patrono do harry potter")
-- OUTPUT:
cervo nao eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 00:34:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if("nome" == "cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(nome, "nao eh patrono do harry potter")
-- EXECUTION TIME:
0.182527
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:34:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if("nome" == cervo):
	print("cervo eh patrono do harry potter")
else:
	print(nome, "nao eh patrono do harry potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if("nome" == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:35:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if("nome" == "cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(nome, "nao eh patrono do harry potter")
-- OUTPUT:
cervo nao eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:35:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if("nome" == "cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(nome, "nao eh patrono do harry potter")
-- OUTPUT:
cervo nao eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:35:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if("nome == cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(nome, "nao eh patrono do harry potter")
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 00:35:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if("nome == cervo"):
	print("cervo eh patrono do harry potter")
else:
	print(nome, "nao eh patrono do harry potter")
-- EXECUTION TIME:
0.110632
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:37:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if("nome == cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(nome, "nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 00:38:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if("nome == cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(nome, "nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.206551
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:38:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if("nome == cervo"):
	print("cervo eh patrono do Harry Potter. ")
else:
	print(nome, "nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:38:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if("nome == cervo"):
	print("cervo eh patrono do Harry Potter. ")
else:
	print(nome, "nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:39:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if(nome == "cervo"):
	print("cervo eh patrono do Harry Potter. ")
else:
	print(nome, "nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:39:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if(nome == "cervo"):
	print("cervo eh patrono do Harry Potter. ")
else:
	print(nome, "nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:40:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if(nome == "cervo"):
	print("cervo eh patrono do Harry Potter. ")
else:
	print(nome, "nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:40:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if(nome == "cervo"):
	print("cervo eh patrono do Harry Potter. ")
else:
	print(nome, "nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:40:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if(nome == "cervo"):
	print("cervo eh patrono do Harry Potter. ")
else:
	print(nome, "nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:41:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if(nome == "cervo"):
	print("cervo eh patrono do Harry Potter. ")
else:
	print(nome, "nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:41:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if(nome == "cervo"):
	print("cervo eh patrono do Harry Potter. ")
else:
	print(nome, "nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 00:42:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if(nome == "cervo"):
	print("cervo eh patrono do Harry Potter. ")
else:
	print(nome, "nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.242363
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter.
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:42:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if(nome == "cervo"):
	print("cervo eh patrono do Harry Potter ")
else:
	print(nome, "nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 00:42:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome do patrono: ")

if(nome == "cervo"):
	print("cervo eh patrono do Harry Potter ")
else:
	print(nome, "nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.190118
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
